tests/neg/i7056.check
-- [E007] Type Mismatch Error: tests/neg/i7056.scala:19:8 --------------------------------------------------------------
19 |val z = x.idnt1  // error
   |        ^
   |        Found:    (given_PartialId_B : B)
   |        Required: PartialId[T]
   |
   |        where:    T is a type variable with constraint <: A
   |
   |
   |        Note: a match type could not be fully reduced:
   |
   |          trying to reduce  PartialId[T]
   |          failed since selector  T
   |          matches none of the cases
   |
   |            case B => T

longer explanation available when compiling with `-explain`
